[gd_scene load_steps=12 format=2]

[ext_resource path="res://materials/wrought_iron.material" type="Material" id=1]
[ext_resource path="res://materials/rust.material" type="Material" id=2]
[ext_resource path="res://scenes/turret.gd" type="Script" id=3]
[ext_resource path="res://scenes/Muzzle_Flash.tscn" type="PackedScene" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "turret_Cube001"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 255, 255, 127, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 63, 255, 255, 127, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=2]
resource_name = "turret_Cylinder"
surfaces/0 = {
"aabb": AABB( -0.433013, -1, -0.5, 0.866025, 2, 1 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 0, 191, 129, 80, 176, 63, 0, 0, 0, 56, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 0, 191, 0, 130, 126, 193, 0, 58, 20, 56, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 0, 191, 127, 80, 129, 86, 0, 60, 0, 56, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 191, 129, 80, 176, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 191, 0, 126, 126, 63, 0, 52, 20, 56, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 191, 127, 80, 129, 86, 0, 60, 0, 0, 216, 179, 221, 62, 0, 0, 128, 191, 255, 255, 127, 190, 0, 130, 126, 193, 169, 59, 10, 57, 216, 179, 221, 62, 0, 0, 128, 191, 255, 255, 127, 190, 127, 80, 129, 86, 170, 58, 0, 56, 216, 179, 221, 62, 0, 0, 128, 191, 255, 255, 127, 190, 127, 0, 127, 127, 170, 58, 0, 56, 216, 179, 221, 62, 0, 0, 128, 63, 255, 255, 127, 190, 0, 126, 126, 63, 83, 55, 10, 57, 216, 179, 221, 62, 0, 0, 128, 63, 255, 255, 127, 190, 127, 80, 129, 86, 170, 58, 0, 0, 216, 179, 221, 62, 0, 0, 128, 63, 255, 255, 127, 190, 127, 0, 127, 127, 170, 58, 0, 0, 215, 179, 221, 62, 0, 0, 128, 191, 1, 0, 128, 62, 0, 130, 126, 193, 169, 59, 245, 58, 215, 179, 221, 62, 0, 0, 128, 191, 1, 0, 128, 62, 46, 0, 127, 86, 85, 57, 0, 56, 215, 179, 221, 62, 0, 0, 128, 191, 1, 0, 128, 62, 127, 0, 127, 127, 85, 57, 0, 56, 215, 179, 221, 62, 0, 0, 128, 63, 1, 0, 128, 62, 0, 126, 126, 63, 83, 55, 245, 58, 215, 179, 221, 62, 0, 0, 128, 63, 1, 0, 128, 62, 46, 0, 127, 86, 85, 57, 0, 0, 215, 179, 221, 62, 0, 0, 128, 63, 1, 0, 128, 62, 127, 0, 127, 127, 85, 57, 0, 0, 46, 189, 59, 179, 0, 0, 128, 191, 0, 0, 0, 63, 210, 0, 80, 63, 255, 55, 0, 56, 46, 189, 59, 179, 0, 0, 128, 191, 0, 0, 0, 63, 0, 130, 126, 193, 0, 58, 235, 59, 46, 189, 59, 179, 0, 0, 128, 191, 0, 0, 0, 63, 46, 0, 127, 86, 255, 55, 0, 56, 46, 189, 59, 179, 0, 0, 128, 63, 0, 0, 0, 63, 210, 0, 80, 63, 255, 55, 0, 0, 46, 189, 59, 179, 0, 0, 128, 63, 0, 0, 0, 63, 0, 126, 126, 63, 255, 51, 235, 59, 46, 189, 59, 179, 0, 0, 128, 63, 0, 0, 0, 63, 46, 0, 127, 86, 255, 55, 0, 0, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 62, 129, 0, 0, 63, 85, 53, 0, 56, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 62, 210, 0, 80, 63, 85, 53, 0, 56, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 62, 0, 130, 126, 193, 86, 56, 245, 58, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 62, 129, 0, 0, 63, 85, 53, 0, 0, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 62, 210, 0, 80, 63, 85, 53, 0, 0, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 62, 0, 126, 126, 63, 101, 41, 245, 58, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 190, 129, 0, 0, 63, 85, 49, 0, 56, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 190, 129, 80, 176, 63, 85, 49, 0, 56, 216, 179, 221, 190, 0, 0, 128, 191, 253, 255, 127, 190, 0, 130, 126, 193, 86, 56, 10, 57, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 190, 129, 0, 0, 63, 85, 49, 0, 0, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 190, 129, 80, 176, 63, 85, 49, 0, 0, 216, 179, 221, 190, 0, 0, 128, 63, 253, 255, 127, 190, 0, 126, 126, 63, 101, 41, 10, 57 ),
"array_index_data": PoolByteArray( 2, 0, 10, 0, 5, 0, 2, 0, 7, 0, 10, 0, 8, 0, 17, 0, 11, 0, 8, 0, 14, 0, 17, 0, 13, 0, 23, 0, 16, 0, 13, 0, 20, 0, 23, 0, 18, 0, 28, 0, 21, 0, 18, 0, 25, 0, 28, 0, 15, 0, 4, 0, 9, 0, 4, 0, 29, 0, 35, 0, 29, 0, 15, 0, 22, 0, 4, 0, 15, 0, 29, 0, 24, 0, 33, 0, 27, 0, 24, 0, 30, 0, 33, 0, 31, 0, 3, 0, 34, 0, 31, 0, 0, 0, 3, 0, 32, 0, 6, 0, 1, 0, 6, 0, 19, 0, 12, 0, 19, 0, 32, 0, 26, 0, 6, 0, 32, 0, 19, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 60,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ArrayMesh" id=3]
resource_name = "turret_Cube002"
surfaces/0 = {
"aabb": AABB( -0.75, -0.522643, -1.12631, 1.5, 1.5, 2.25264 ),
"array_data": PoolByteArray( 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 64, 191, 14, 52, 122, 63, 20, 43, 144, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 64, 191, 14, 52, 122, 63, 20, 43, 144, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 64, 191, 14, 52, 122, 63, 20, 43, 144, 63, 36, 127, 129, 63, 0, 59, 0, 52, 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 64, 191, 242, 203, 5, 191, 20, 43, 144, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 64, 191, 176, 30, 139, 61, 20, 43, 144, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 64, 191, 176, 30, 139, 61, 20, 43, 144, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 64, 191, 176, 30, 139, 61, 20, 43, 144, 191, 36, 127, 129, 63, 0, 59, 0, 56, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 64, 63, 14, 52, 122, 63, 20, 43, 144, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 64, 63, 14, 52, 122, 63, 20, 43, 144, 63, 36, 127, 129, 63, 0, 57, 0, 52, 0, 0, 64, 63, 14, 52, 122, 63, 20, 43, 144, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 64, 63, 242, 203, 5, 191, 20, 43, 144, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 64, 63, 176, 30, 139, 61, 20, 43, 144, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 64, 63, 176, 30, 139, 61, 20, 43, 144, 191, 36, 127, 129, 63, 0, 57, 0, 56, 0, 0, 64, 63, 176, 30, 139, 61, 20, 43, 144, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=4]
resource_name = "turret_Cylinder001"
surfaces/0 = {
"aabb": AABB( -0.216506, -1.65, -0.25, 0.433013, 3.3, 0.5 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 49, 51, 211, 191, 254, 255, 127, 190, 129, 176, 176, 63, 0, 0, 0, 56, 0, 0, 0, 0, 49, 51, 211, 191, 254, 255, 127, 190, 0, 130, 126, 193, 0, 58, 20, 56, 0, 0, 0, 0, 49, 51, 211, 191, 254, 255, 127, 190, 127, 176, 129, 86, 0, 60, 0, 56, 0, 0, 0, 0, 49, 51, 211, 63, 1, 0, 128, 190, 129, 176, 176, 63, 0, 0, 0, 0, 0, 0, 0, 0, 49, 51, 211, 63, 1, 0, 128, 190, 0, 126, 126, 63, 0, 52, 20, 56, 0, 0, 0, 0, 49, 51, 211, 63, 1, 0, 128, 190, 127, 176, 129, 86, 0, 60, 0, 0, 216, 179, 93, 62, 49, 51, 211, 191, 251, 255, 255, 189, 0, 130, 126, 193, 169, 59, 10, 57, 216, 179, 93, 62, 49, 51, 211, 191, 251, 255, 255, 189, 127, 176, 129, 86, 170, 58, 0, 56, 216, 179, 93, 62, 49, 51, 211, 191, 251, 255, 255, 189, 126, 0, 127, 127, 170, 58, 0, 56, 216, 179, 93, 62, 49, 51, 211, 63, 2, 0, 0, 190, 0, 126, 126, 63, 83, 55, 10, 57, 216, 179, 93, 62, 49, 51, 211, 63, 2, 0, 0, 190, 127, 176, 129, 86, 170, 58, 0, 0, 216, 179, 93, 62, 49, 51, 211, 63, 2, 0, 0, 190, 126, 0, 127, 127, 170, 58, 0, 0, 215, 179, 93, 62, 49, 51, 211, 191, 3, 0, 0, 62, 0, 130, 126, 193, 169, 59, 245, 58, 215, 179, 93, 62, 49, 51, 211, 191, 3, 0, 0, 62, 46, 0, 127, 86, 85, 57, 0, 56, 215, 179, 93, 62, 49, 51, 211, 191, 3, 0, 0, 62, 126, 0, 127, 127, 85, 57, 0, 56, 215, 179, 93, 62, 49, 51, 211, 63, 254, 255, 255, 61, 0, 126, 126, 63, 83, 55, 245, 58, 215, 179, 93, 62, 49, 51, 211, 63, 254, 255, 255, 61, 46, 0, 127, 86, 85, 57, 0, 0, 215, 179, 93, 62, 49, 51, 211, 63, 254, 255, 255, 61, 126, 0, 127, 127, 85, 57, 0, 0, 46, 189, 187, 178, 49, 51, 211, 191, 1, 0, 128, 62, 210, 0, 80, 63, 255, 55, 0, 56, 46, 189, 187, 178, 49, 51, 211, 191, 1, 0, 128, 62, 0, 130, 126, 193, 0, 58, 235, 59, 46, 189, 187, 178, 49, 51, 211, 191, 1, 0, 128, 62, 46, 0, 127, 86, 255, 55, 0, 56, 46, 189, 187, 178, 49, 51, 211, 63, 254, 255, 127, 62, 210, 0, 80, 63, 255, 55, 0, 0, 46, 189, 187, 178, 49, 51, 211, 63, 254, 255, 127, 62, 0, 126, 126, 63, 255, 51, 235, 59, 46, 189, 187, 178, 49, 51, 211, 63, 254, 255, 127, 62, 46, 0, 127, 86, 255, 55, 0, 0, 216, 179, 93, 190, 49, 51, 211, 191, 1, 0, 0, 62, 129, 0, 0, 63, 85, 53, 0, 56, 216, 179, 93, 190, 49, 51, 211, 191, 1, 0, 0, 62, 210, 0, 80, 63, 85, 53, 0, 56, 216, 179, 93, 190, 49, 51, 211, 191, 1, 0, 0, 62, 0, 130, 126, 193, 86, 56, 245, 58, 216, 179, 93, 190, 49, 51, 211, 63, 249, 255, 255, 61, 129, 0, 0, 63, 85, 53, 0, 0, 216, 179, 93, 190, 49, 51, 211, 63, 249, 255, 255, 61, 210, 0, 80, 63, 85, 53, 0, 0, 216, 179, 93, 190, 49, 51, 211, 63, 249, 255, 255, 61, 0, 126, 126, 63, 101, 41, 245, 58, 216, 179, 93, 190, 49, 51, 211, 191, 249, 255, 255, 189, 129, 0, 0, 63, 85, 49, 0, 56, 216, 179, 93, 190, 49, 51, 211, 191, 249, 255, 255, 189, 129, 176, 176, 63, 85, 49, 0, 56, 216, 179, 93, 190, 49, 51, 211, 191, 249, 255, 255, 189, 0, 130, 126, 193, 86, 56, 10, 57, 216, 179, 93, 190, 49, 51, 211, 63, 1, 0, 0, 190, 129, 0, 0, 63, 85, 49, 0, 0, 216, 179, 93, 190, 49, 51, 211, 63, 1, 0, 0, 190, 129, 176, 176, 63, 85, 49, 0, 0, 216, 179, 93, 190, 49, 51, 211, 63, 1, 0, 0, 190, 0, 126, 126, 63, 101, 41, 10, 57 ),
"array_index_data": PoolByteArray( 2, 0, 10, 0, 5, 0, 2, 0, 7, 0, 10, 0, 8, 0, 17, 0, 11, 0, 8, 0, 14, 0, 17, 0, 13, 0, 23, 0, 16, 0, 13, 0, 20, 0, 23, 0, 18, 0, 28, 0, 21, 0, 18, 0, 25, 0, 28, 0, 15, 0, 4, 0, 9, 0, 4, 0, 29, 0, 35, 0, 29, 0, 15, 0, 22, 0, 4, 0, 15, 0, 29, 0, 24, 0, 33, 0, 27, 0, 24, 0, 30, 0, 33, 0, 31, 0, 3, 0, 34, 0, 31, 0, 0, 0, 3, 0, 32, 0, 6, 0, 1, 0, 6, 0, 19, 0, 12, 0, 19, 0, 32, 0, 26, 0, 6, 0, 32, 0, 19, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 60,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="SphereMesh" id=7]
height = 1.0
radial_segments = 8
rings = 8

[sub_resource type="SphereShape" id=6]
radius = 60.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 3, 2.8 )

[node name="turret" type="KinematicBody" groups=["robot"]]
script = ExtResource( 3 )

[node name="LOS" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.75, 0 )
enabled = true

[node name="Base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="Turn_Rod" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")
material/0 = ExtResource( 1 )

[node name="Head" type="MeshInstance" parent="Turn_Rod"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52264, -0.376315 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="Barrel" type="MeshInstance" parent="Turn_Rod/Head"]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.227357, 2.72631 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = ExtResource( 1 )

[node name="Muzzle_Flash" parent="Turn_Rod/Head/Barrel" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0.067971, 2, -0.0041914 )
mesh = SubResource( 7 )
skeleton = NodePath("")

[node name="muzzle_flash_timer" type="Timer" parent="Turn_Rod/Head/Barrel"]

[node name="muzzle" type="Spatial" parent="Turn_Rod/Head/Barrel"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 1.65, 0 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )

[node name="attack_timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.1 )
shape = SubResource( 5 )
